add pinterest flag

--- a/index.html
+++ b/index.html
@@ -207,12 +207,19 @@
         </div>
       </section>
 
-      <!-- <section id="faq" class="faq-wrap">
-        <div class="faq-content">
-          <h2>Frequently asked questions</h2>
-          <div class="accordion"></div>
+      <section class="pinterest-wrap">
+        <div class="pinterest-text">
+          <div class="ball"></div>
+          The creation of this website was inspired by
+          <a
+            target="_blank"
+            href="https://www.pinterest.com/pin/886083295427849963/"
+            >this</a
+          >
+          design found on Pinterest, based solely on this image, without a
+          proper Figma file.
         </div>
-      </section> -->
+      </section>
     </main>
 
     <footer>
