implement slider for promo section

--- a/index.html
+++ b/index.html
@@ -58,22 +58,122 @@
     </nav>
 
     <main>
-      <section class="promo-box">
-        <div class="promo-box-content">
-          <div class="promo-box-text">
-            <h2 class="collection-name">
-              The Winter <br />
-              <span class="hotlist">Hotlist</span>
-            </h2>
-            <a href="#catalogue" class="collection-cta">VIEW COLLECTION</a>
-          </div>
+      <!-- slider -->
+      <section class="slider-wrap">
+        <div class="slider-width">
+          <div class="slider">
+            <div class="buttons">
+              <button id="prev">
+                <img
+                  class="slider-arrow left"
+                  src="/images/arrow-left.svg"
+                  alt="left arrow"
+                />
+              </button>
+              <button id="next">
+                <img
+                  class="slider-arrow right"
+                  src="/images/arorw-right.svg"
+                  alt="right arrow"
+                />
+              </button>
+            </div>
+            <div class="slide current">
+              <div class="content">
+                <div class="promo-box-content">
+                  <div class="promo-box-text">
+                    <h2 class="collection-name">
+                      The Fall <br />
+                      <span class="hotlist">Hotlist</span>
+                    </h2>
+                    <a href="#catalogue" class="collection-cta"
+                      >VIEW COLLECTION</a
+                    >
+                  </div>
 
-          <div class="img-container">
-            <img class="promo-box-img" src="/images/model3.png" alt="" />
+                  <div class="img-container">
+                    <img
+                      class="promo-box-img"
+                      src="/images/model3.png"
+                      alt=""
+                    />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="slide">
+              <div class="content">
+                <div class="promo-box-content">
+                  <div class="promo-box-text">
+                    <h2 class="collection-name">
+                      The Summer <br />
+                      <span class="hotlist">Hotlist</span>
+                    </h2>
+                    <a href="#catalogue" class="collection-cta"
+                      >VIEW COLLECTION</a
+                    >
+                  </div>
+
+                  <div class="img-container">
+                    <img
+                      class="promo-box-img"
+                      src="/images/model4.png"
+                      alt=""
+                    />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="slide">
+              <div class="content">
+                <div class="promo-box-content">
+                  <div class="promo-box-text">
+                    <h2 class="collection-name">
+                      The Winter <br />
+                      <span class="hotlist">Hotlist</span>
+                    </h2>
+                    <a href="#catalogue" class="collection-cta"
+                      >VIEW COLLECTION</a
+                    >
+                  </div>
+
+                  <div class="img-container">
+                    <img
+                      class="promo-box-img"
+                      src="/images/model2.png"
+                      alt=""
+                    />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="slide">
+              <div class="content">
+                <div class="promo-box-content">
+                  <div class="promo-box-text">
+                    <h2 class="collection-name">
+                      The Spring <br />
+                      <span class="hotlist">Hotlist</span>
+                    </h2>
+                    <a href="#catalogue" class="collection-cta"
+                      >VIEW COLLECTION</a
+                    >
+                  </div>
+
+                  <div class="img-container">
+                    <img
+                      class="promo-box-img"
+                      src="/images/model1.png"
+                      alt=""
+                    />
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
-
+      <!-- slider end -->
       <section class="perks-wrapper">
         <div class="perks">
           <div class="perk-box">
