--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav id="navbar">
       <div class="nav-content">
         <div class="logo-links">
-          <h1><img src="/images/logo-nav.svg" alt="Cariana logo" /></h1>
+          <h1><img src="images/logo-nav.svg" alt="Cariana logo" /></h1>
 
           <ul class="desktop-links">
             <li><a href="#">Home</a></li>
@@ -24,12 +24,12 @@
         <div class="cart-search-ham">
           <button class="cart">
             <div class="cart-items-count"><span class="number">7</span></div>
-            <img class="cart-icon" src="/images/cart.svg" alt="cart icon" />
+            <img class="cart-icon" src="images/cart.svg" alt="cart icon" />
           </button>
           <button class="search">
             <img
               class="search-icon"
-              src="/images/search-icon.svg"
+              src="images/search-icon.svg"
               alt="search icon"
             />
           </button>
@@ -44,7 +44,7 @@
       <div class="overlay">
         <img
           class="ham-logo"
-          src="/images/ham-logo.svg"
+          src="images/ham-logo.svg"
           alt="cariana logo in white"
         />
         <ul>
@@ -66,14 +66,14 @@
               <button id="prev">
                 <img
                   class="slider-arrow left"
-                  src="/images/arrow-left.svg"
+                  src="images/arrow-left.svg"
                   alt="left arrow"
                 />
               </button>
               <button id="next">
                 <img
                   class="slider-arrow right"
-                  src="/images/arorw-right.svg"
+                  src="images/arorw-right.svg"
                   alt="right arrow"
                 />
               </button>
@@ -94,7 +94,7 @@
                   <div class="img-container">
                     <img
                       class="promo-box-img"
-                      src="/images/model3.png"
+                      src="images/model3.png"
                       alt=""
                     />
                   </div>
@@ -117,7 +117,7 @@
                   <div class="img-container">
                     <img
                       class="promo-box-img"
-                      src="/images/model4.png"
+                      src="images/model4.png"
                       alt=""
                     />
                   </div>
@@ -140,7 +140,7 @@
                   <div class="img-container">
                     <img
                       class="promo-box-img"
-                      src="/images/model2.png"
+                      src="images/model2.png"
                       alt=""
                     />
                   </div>
@@ -163,7 +163,7 @@
                   <div class="img-container">
                     <img
                       class="promo-box-img"
-                      src="/images/model1.png"
+                      src="images/model1.png"
                       alt=""
                     />
                   </div>
@@ -178,7 +178,7 @@
         <div class="perks">
           <div class="perk-box">
             <div class="perk-img-box">
-              <img class="perk-img" src="/images/truck.svg" alt="truck icon" />
+              <img class="perk-img" src="images/truck.svg" alt="truck icon" />
             </div>
             <div class="perk-text">
               <h3>FREE DELIVERY FROM $250</h3>
@@ -192,7 +192,7 @@
             <div class="perk-img-box">
               <img
                 class="perk-img"
-                src="/images/wallet.svg"
+                src="images/wallet.svg"
                 alt="wallet icon"
               />
             </div>
@@ -206,7 +206,7 @@
           </div>
           <div class="perk-box">
             <div class="perk-img-box">
-              <img class="perk-img" src="/images/lock.svg" alt="lock icon" />
+              <img class="perk-img" src="images/lock.svg" alt="lock icon" />
             </div>
             <div class="perk-text">
               <h3>SECURE PAYMENT</h3>
@@ -218,7 +218,7 @@
           </div>
           <div class="perk-box">
             <div class="perk-img-box">
-              <img class="perk-img" src="/images/check.svg" alt="check icon" />
+              <img class="perk-img" src="images/check.svg" alt="check icon" />
             </div>
             <div class="perk-text">
               <h3>AUTHENTICITY 100% GUARANTEED</h3>
@@ -233,7 +233,7 @@
       <section class="watch-shoes-wrap">
         <div class="watch-shoes">
           <div class="object-box">
-            <div class="object-img"><img src="/images/watch.png" alt="" /></div>
+            <div class="object-img"><img src="images/watch.png" alt="" /></div>
             <div class="object-text">
               <h4>MEN'S WATCHES</h4>
               <p>
@@ -245,7 +245,7 @@
           </div>
           <div class="object-box">
             <div class="object-img">
-              <img src="/images/mens-shoes.png" alt="" />
+              <img src="images/mens-shoes.png" alt="" />
             </div>
             <div class="object-text">
               <h4>SHOES FOR MEN</h4>
@@ -291,7 +291,7 @@
             <div class="menu-btns">
               <button id="filterBtn" class="filter-dropdown">
                 SORT BY:
-                <img src="/images/down-arrow.svg" alt="downward arrow" />
+                <img src="images/down-arrow.svg" alt="downward arrow" />
               </button>
               <ul class="dropdown-content">
                 <li><button id="all">All</button></li>
@@ -325,7 +325,7 @@
     <footer>
       <div class="footer-content">
         <div class="copyright-box">
-          <img src="/images/logo-nav.svg" alt="footer logo" />
+          <img src="images/logo-nav.svg" alt="footer logo" />
           <p>
             COPYRIGHT &copy; CARIANA <span id="year"></span> ALL RIGHTS RESERVED
           </p>
@@ -349,7 +349,7 @@
             <li>
               <a href=""
                 ><img
-                  src="/images/facebook.svg"
+                  src="images/facebook.svg"
                   alt="facebook logo"
                 />Facebook</a
               >
@@ -357,20 +357,20 @@
             <li>
               <a href=""
                 ><img
-                  src="/images/instagram.svg"
+                  src="images/instagram.svg"
                   alt="instagram logo"
                 />Instagram</a
               >
             </li>
             <li>
               <a href=""
-                ><img src="/images/youtube.svg" alt="youtube logo" />Youtube</a
+                ><img src="images/youtube.svg" alt="youtube logo" />Youtube</a
               >
             </li>
             <li>
               <a href=""
                 ><img
-                  src="/images/pinterest.svg"
+                  src="images/pinterest.svg"
                   alt="pinterest logo"
                 />Pinterest</a
               >
